k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
    - host: recommend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommend
                port:
                  number: 80
